# skypro_dz30

./: db.sqlite3  manage.py  pyproject.toml  utils.py
ads/: models.py
ads/ad/: serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
selection/: models.py  serializers.py  urls.py  views.py
selection/migrations/: 0001_initial.py
skypro_dz30/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
users/user/: serializers.py
